# kaoyan

./: .env.example  .env.production.example  .gitignore  README.md  design-qa.md  docker-compose.prod.yml  docker-compose.yml
artifacts/: visual-compare.html
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260630_0001_initial_schema.py  20260630_0002_doubao_image_reviews.py
backend/app/: main.py
backend/app/api/: deps.py  routes_auth.py  routes_profile.py  routes_records.py  routes_reviews.py  routes_stats.py  routes_tasks.py  routes_timer.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  profile.py  review.py  study.py  user.py
backend/app/schemas/: auth.py  profile.py  review.py  stats.py  study.py
backend/app/services/: doubao.py  record_images.py
backend/kaoyan_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_auth.py  test_doubao_service.py  test_study_flow.py
deploy/: Caddyfile  README.md  bootstrap-ubuntu.sh
docs/superpowers/plans/: 2026-06-30-kaoyan-11408-implementation-plan.md
docs/superpowers/specs/: 2026-06-30-doubao-image-review-design.md  2026-06-30-kaoyan-11408-design.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AppShell.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  study.ts
frontend/src/types/: api.ts
(+7 files in other folders)
