[project]
name = "kaoyan-backend"
version = "0.1.0"
description = "FastAPI backend for a private 11408 postgraduate exam study dashboard."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "httpx>=0.27.0",
  "pymysql>=1.1.1",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
